--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ description = "PubSub Message Passing for Rust WASM"
 edition = "2018"
 readme = "README.md"
 repository = "https://github.com/andrew-johnson-4/jsmx"
+
+[dependencies]
+serde_json = "1.0"
